重构注册